--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="text-bg-info text-center">
             <h2>MOBILE</h2>
             <p>Price: $10000</p>
-        <img src="image1.png"><height="50px></height>"<width="50px"></width>
+        <img src="images/mobilepng.jpg"><height="50px></height>"<width="50px"></width>
         <p>100% wax elegant and stylish mobile</p>
             <button class="add-to-cart" onclick="addToCart('MOBILE', 10000)">Add to Cart</button>
         </div>
@@ -45,7 +45,7 @@
         <div class="text-bg-warning text-center">
             <h2>HANDBAG</h2>
             <p>Price: $200</p>
-            <img src ="image2.png"><height="50px></height>"<width="50px"></width>
+            <img src "image/handbagpng.jpg"><height="50px></height>"<width="50px"></width>
             <p>Stylish handbag</p>
             <button class="add-to-cart" onclick="addToCart('HANDBAG', 200)">Add to Cart</button>
         </div>
@@ -53,7 +53,7 @@
         <div class="text-bg-danger text-center">
             <h2>SHOES</h2>
             <p>Price: $500</p>
-            <img src="image3.png"><height="50px></height>"<width="50px"></width>
+            <img src="images/shoespng.jpg"><height="50px></height>"<width="50px"></width>
             <p>the world at your feet so make sure you wearing great shoes</p>
             <button class="add-to-cart" onclick="addToCart(' SHOES', 200)">Add to Cart</button>
         </div>
@@ -61,7 +61,7 @@
         <div class="text-bg-secondary text-center">
             <h2>WATCH</h2>
             <p>Price: $100</p>
-            <img src="image4.png"><height="50px></height>"<width="50px"></width>
+            <img src="images/watchpng.jpg"><height="50px></height>"<width="50px"></width>
             <p>presenting to you these fashion forward watch</p>
             <button class="add-to-cart" onclick="addToCart('WATCH', 100)">Add to Cart</button>
         </div>
@@ -69,7 +69,7 @@
         <div class="text-bg-primary text-center">
             <h2>WATER BOTTLE</h2>
             <p>Price: $150</p>
-            <img src="image5.png"><height="50px></height>"<width="50px"></width>
+            <img src="images/waterbottlepng.jpg"><height="50px></height>"<width="50px"></width>
             <p>make sure that you are bottle is unique</p>
             <button class="add-to-cart" onclick="addToCar('WATER BOTTLE', 150)">Add to Cart</button>
         </div>
