--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="text-bg-warning text-center">
             <h2>HANDBAG</h2>
             <p>Price: $200</p>
-            <img src="images/handbagg.jpg"><height="50px></height>"<width="50px"></width>
+            <img src="images/handbagpng.jpg"><height="50px></height>"<width="50px"></width>
             <p>Stylish handbag</p>
             <button class="add-to-cart" onclick="addToCart('HANDBAG', 200)">Add to Cart</button>
         </div>
